# codelegate

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: desktop-build.yml  desktop-release.yml  release-desktop.yml
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.module.css  App.tsx  app.ts  constants.ts  main.ts  main.tsx  style.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: app.toml
apps/desktop/src-tauri/src/: git.rs  lib.rs  main.rs
apps/desktop/src/components/AgentPicker/: AgentPicker.module.css  AgentPicker.tsx
apps/desktop/src/components/Button/: Button.tsx
apps/desktop/src/components/CloseDialog/: CloseDialog.module.css  CloseDialog.tsx
apps/desktop/src/components/EnvList/: EnvList.module.css  EnvList.tsx
apps/desktop/src/hooks/: useAppState.ts  useTerminalRenderer.ts  useToasts.ts
apps/desktop/src/styles/: global.css  tokens.css
apps/desktop/src/utils/: gitDiff.ts  hotkeys.ts  session.ts  shell.ts  shortcutModifier.ts
apps/website/: index.html  package.json  vite.config.js  wrangler.toml
apps/website/content/blog/: 2026-04-05-release-notes-1-1-0.en.md  2026-04-05-release-notes-1-1-0.zh-tw.md
apps/website/plugins/: vite-plugin-blog.js
apps/website/src/: blog-carousel.js  blog-template.html  main.js  style.css
(+40 files in other folders)
