[package]
name = "codelegate-desktop"
version = "1.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
portable-pty = "0.8"
base64 = "0.22"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "codelegate_desktop"
crate-type = ["cdylib", "staticlib", "rlib"]
